--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -10,4 +10,4 @@ $padding-md: 0.04rem;
 $padding-lg: 0.07rem;
 $padding-xl: 0.1rem;
 
-$filter: blur(0.01rem);
+$filter: blur(1px);
