--- a/src/views/Settings.scss
+++ b/src/views/Settings.scss
@@ -1,7 +1,7 @@
 .settings {
   margin-top: $padding-md;
   font-size: $font-size-sm;
-  flex: 0 0 3.5rem;
+  flex: 0 0 3.72rem;
   color: var(--color-settings-fg);
   background-color: var(--color-settings-bg);
   text-shadow: var(--shadow-settings);
